# image-categorizer

./: .gitignore  Cargo.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: clustering.rs  db.rs  embeddings.rs  init.rs  main.rs  ndarray_compat.rs
src/embeddings/: common.rs  llama_cpp.rs  ollama.rs  open_clip.rs
src/init/: progbar_logwriter.rs
